<resources>

    <!-- App -->
    <string name="app_name">Simple Blog Feed</string>

    <!-- Shared -->
    <string name="user_name">User Name</string>
    <string name="post_title">Post Title</string>
    <string name="post_body">Post Body</string>
    <string name="no_internet_connection">No internet connection, Please check your internet connection and try again</string>

    <!-- activity_post_details.xml -->
    <string name="action">Action</string>

    <!-- CreatePostActivity.java -->
    <string name="create_post">Create Post</string>
    <string name="empty_post_title">Post Title field is empty</string>
    <string name="empty_post_content">Post Content field is empty</string>
    <string name="post_uploaded_successfully">Post Uploaded Successfully</string>

    <!-- EditPostActivity.java -->
    <string name="edit_post">Edit Post</string>
    <string name="post_updated_successfully">Post Updated Successfully</string>

    <!-- menu_main.xml -->
    <string name="menu_item_about_app">About App</string>

    <!-- AboutAppActivity.java -->
    <string name="about_app">About App</string>

    <!-- About -->
    <string name="show_details"><u>Show details</u></string>
    <string name="gmail_account"><u>hassan.amr.soliman@gmail.com</u></string>
    <string name="linkedin_account"><u>linkedin.com/in/hassan-amr-684a851ba</u></string>
    <string name="github_account"><u>github.com/hassan-amr</u></string>
    <string name="hackerrank_account"><u>hackerrank.com/HassanAmrSoliman</u></string>

</resources>