<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/background_white_round"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="top|center"
                    android:src="@drawable/ic_app_logo" />

                <TextView
                    android:id="@+id/textViewAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewAppVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="V 1.0"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="©2022 Hassan Amr"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="All Rights Reserved."
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/background_white_round"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact Me"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewGmail"
                        style="@style/ImageViewIconLarge"
                        android:layout_marginEnd="30dp"
                        android:src="@drawable/ic_gmail" />

                    <ImageView
                        android:id="@+id/imageViewHackerRank"
                        style="@style/ImageViewIconLarge"
                        android:layout_marginEnd="30dp"
                        android:src="@drawable/ic_hackerrank" />

                    <ImageView
                        android:id="@+id/imageViewGitHub"
                        style="@style/ImageViewIconLarge"
                        android:layout_marginEnd="30dp"
                        android:src="@drawable/ic_github" />

                    <ImageView
                        android:id="@+id/imageViewLinkedIn"
                        style="@style/ImageViewIconLarge"
                        android:src="@drawable/ic_linkedin" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textViewShowDetails"
                    style="@style/TextViewLink"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/show_details" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/background_white_round"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact Me"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            style="@style/ImageViewIconSmall"
                            android:src="@drawable/ic_gmail" />

                        <TextView
                            android:id="@+id/textViewGmail"
                            style="@style/TextViewLink"
                            android:text="@string/gmail_account" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <ImageView
                            style="@style/ImageViewIconSmall"
                            android:src="@drawable/ic_linkedin" />

                        <TextView
                            android:id="@+id/textViewLinkedIn"
                            style="@style/TextViewLink"
                            android:text="@string/linkedin_account" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <ImageView
                            style="@style/ImageViewIconSmall"
                            android:src="@drawable/ic_github" />

                        <TextView
                            android:id="@+id/textViewGitHub"
                            style="@style/TextViewLink"
                            android:text="@string/github_account" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <ImageView
                            style="@style/ImageViewIconSmall"
                            android:src="@drawable/ic_hackerrank" />

                        <TextView
                            android:id="@+id/textViewHackerRank"
                            style="@style/TextViewLink"
                            android:text="@string/hackerrank_account" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>