<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/post_title"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextPostTitle"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/background_white_round_grey_stroke"
                        android:hint="@string/post_title"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/grey"
                        android:textColorHint="@color/grey"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/post_body"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextPostBody"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/background_white_round_grey_stroke"
                        android:gravity="start"
                        android:hint="@string/post_body"
                        android:inputType="textMultiLine"
                        android:padding="10dp"
                        android:textColor="@color/grey"
                        android:textColorHint="@color/grey"
                        android:textSize="17sp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:indeterminateTint="@color/colorPrimary" />

        <Button
            android:id="@+id/buttonAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background_green_round_gradient"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/action"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</layout>